egonlang-core/res/examples/valid/let_decl_with_assign_from_if_else_expr_in_block.eg
let a = {if (true) { 123 } else { 456 }};